# fuzzytail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  README.md  ct.conf  ct.conf.catppuccin  ct.conf.dracula  ct.conf.lackluster  ct.conf.miasma  ct.sh  ft.conf.lackluster  ft.conf.rose-pine  ft.conf.tokyo-night  ftail.pl  install.sh  upload-ssh.sh  upload-to-github.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ft/: ft.conf.rose-pine
src/: colorizer.rs  config.rs  filter.rs  interactive.rs  main.rs  output.rs  popup.rs  tail.rs  theme.rs
themes/: README.md  ft.conf.catppuccin  ft.conf.dracula  ft.conf.lackluster  ft.conf.miasma  ft.conf.rose-pine  ft.conf.tokyo-night
