[package]
name = "fuzzytail"
version = "0.1.0"
edition = "2021"
authors = ["FuzzyTail Contributors"]
description = "A modern, colorful tail replacement with true color support"
license = "MIT"
repository = "https://github.com/fuzzytail/fuzzytail"

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossterm = "0.28"
notify = "6.0"
anyhow = "1.0"
dirs = "5.0"
serde_json = "1.0"
is-terminal = "0.4"
